# croissant-baker

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  PR_REPORT.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  rai-example.yaml  release-please-config.json  sitemap.xml
.github/workflows/: docs.yaml  release-please.yaml  test.yaml
docs/: generate.py  getting-started.md  index.md  technical_overview.md
docs/_generated/: formats-table.md  rai-flags-table.md
docs/reference/: api.md  cli.md
docs/user-guide/: examples.md  rai.md  supported-formats.md
eval/: README.md
eval/dcm_validate/: download.sh  test_dcm_validate_eval.py
eval/dcm_validate/output/: dcm_validate_summary.json
eval/fhir_bundle/: download.sh  test_fhir_bundle_eval.py
eval/fhir_smart_bulk/: download.sh  standards_eval.py  test_fhir_smart_bulk_eval.py
eval/fhir_smart_bulk/output/: smart_bulk_standards_comparison.json  smart_bulk_standards_ground_truth.json
eval/neurips_2025/: download.sh  picks.json  test_neurips_2025_eval.py
eval/neurips_2025/producer_croissants/: 63Tia99ofI.json  FLiMxTkIeu.json  LBKyjz2ESc.json  LuMGoG6lBA.json  M476xkfNXe.json  MgXrLxjDed.json  N5BB7Or30g.json  PuzbYHf1GR.json  SAT0KPA5UO.json  SSF4qgsNYE.json  VIsPHMMiW8.json  VfG4FBJ9Gc.json  ZONgHRsAbl.json  ZbcUIxACQE.json  a3hafrDzuA.json  cU5W9Z3r8p.json  ig9ujp50D4.json  khzyK7RuzJ.json  mORzRZaqT4.json  mPznBXZSWf.json  mdA5lVvNcU.json  nMpJoVmRy1.json  oLGUJ7OmyE.json  rf8c4zw9lO.json  zRhO4hizR8.json
eval/neurips_2025/scripts/: fetch_papers_csv.py  papers.csv
eval/open_targets/: croissant_ground_truth.json  download.sh  test_open_targets_eval.py
eval/open_targets/output/: open_targets_comparison.json
eval/openneuro/: download.sh  test_openneuro_eval.py
getting-started/: index.html
reference/api/: index.html
reference/cli/: index.html
search/: search_index.json
src/croissant_baker/: __main__.py  files.py  metadata_generator.py
src/croissant_baker/handlers/: __init__.py  base_handler.py  csv_handler.py  dicom_handler.py  fhir_handler.py  image_handler.py  json_handler.py  nifti_handler.py  parquet_handler.py  registry.py  tsv_handler.py  utils.py  wfdb_handler.py
src/croissant_baker/rai/: __init__.py  injector.py  loader.py  schema.py
src/croissant_maker/: __main__.py  files.py  handlers.py  metadata_generator.py
src/croissant_maker/handlers/: image_handler.py  parquet_handler.py  registry.py
tests/: test_cli.py  test_csv_handler.py  test_dicom_handler.py  test_end_to_end.py  test_fhir_handler.py  test_files.py  test_handlers.py  test_image_handler.py  test_json_handler.py  test_mlcroissant_api_gaps.py  test_nifti_handler.py  test_parquet_handler.py  test_placeholder.py  test_rai.py  test_reserved_field_names.py  test_tsv_handler.py  test_utils.py  test_wfdb_handler.py
tests/data/input/mimiciv_demo/physionet.org/: mimiciv_demo-rai-example.yaml
tests/data/input/mimiciv_fhir/physionet.org/: robots.txt
tests/data/input/open_targets_subset/disease_hpo/: disease_hpo.parquet
tests/data/input/open_targets_subset/drug_warning/: part-00000-0e5e2e74-5319-4e43-a413-36908cb023be-c000.snappy.parquet
tests/data/input/open_targets_subset/so/: so.parquet
tests/data/input/spect_demo/: README.md
tests/data/input/spect_demo/DICOM/: 1.2.840.4267.32.38585815286282266011396309788536446741.dcm  1.2.840.4267.32.52459982182626589873015343667347062329.dcm  (+1 more)
tests/data/input/uniprot_demo/: uniprot_human_reviewed_200.tsv
tests/data/output/: eicu_demo_croissant.jsonld  gharchive_demo_croissant.jsonld  glaucoma_fundus_croissant.jsonld  meds_full_croissant.jsonld  mimiciv_demo_croissant.jsonld  mimiciv_demo_croissant_rai.jsonld  mimiciv_demo_meds_croissant.jsonld  mimiciv_demo_omop_croissant.jsonld  mimiciv_fhir_demo_croissant.jsonld  mimiciv_full_croissant.jsonld  mitdb_wfdb_croissant.jsonld  open_targets_like_croissant.jsonld  open_targets_subset_croissant.jsonld  reserved_names_croissant.jsonld  satellite_public_health_croissant.jsonld  spect_demo_croissant.jsonld  uniprot_demo_croissant.jsonld
user-guide/examples/: index.html
user-guide/rai/: index.html
user-guide/supported-formats/: index.html
(+18 files in other folders)
