[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "croissant-baker"
version = "0.1.0"
description = "A tool to automatically generate Croissant metadata for datasets."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Rafi Al Attrach", email = "rafiaa@mit.edu" },
  { name = "Tom Pollard", email = "tpollard@mit.edu" },
  { name = "Sebastian Lobentanzer", email = "sebastian.lobentanzer@gmail.com"},
]
# Runtime dependencies (PEP 508 specifiers, lowercase canonical names).
# Note: pandas is not a direct dependency — available transitively via wfdb.
dependencies = [
    "typer>=0.9.0",
    "mlcroissant>=1.0.20",
    "rich>=13.0.0",
    "wfdb>=4.0.0",
    "pyarrow>=15.0.0",
    "pillow>=11.0.0",
    "tifffile>=2024.1.0",
]

[project.scripts]
croissant-baker = "croissant_baker.__main__:app"

# PEP 735 dependency groups — not propagated to downstream consumers.
# Install with: uv sync --group dev
[dependency-groups]
test = ["pytest>=7.0"]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    { include-group = "test" },
]

[tool.hatch.build.targets.wheel]
packages = ["src/croissant_baker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Suppress rdflib warning from mlcroissant (external dependency)
filterwarnings = ["ignore::DeprecationWarning:rdflib.*"]

[tool.ruff]
src = ["src"]
