[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "croissant-baker"
version = "0.1.2"
description = "A tool to automatically generate Croissant metadata for datasets."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Rafi Al Attrach", email = "rafiaa@mit.edu" },
  { name = "Tom Pollard", email = "tpollard@mit.edu" },
  { name = "Sebastian Lobentanzer", email = "sebastian.lobentanzer@gmail.com"},
]
# Runtime dependencies (PEP 508 specifiers, lowercase canonical names).
# Note: pandas is not a direct dependency — available transitively via wfdb.
dependencies = [
    "typer>=0.9.0",
    "mlcroissant>=1.0.20",
    "rich>=15.0.0",
    "wfdb>=4.3.1",
    "pyarrow>=23.0.1",
    "pillow>=12.2.0",
    "tifffile>=2024.1.0",
    "pyyaml>=6.0",
]

[project.scripts]
croissant-baker = "croissant_baker.__main__:app"

# PEP 735 dependency groups — not propagated to downstream consumers.
# Install with: uv sync --group dev
[dependency-groups]
test = ["pytest>=7.0"]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=4.5.1",
    { include-group = "test" },
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.7,<10",
    "mkdocstrings[python]>=1.0",
    "griffe>=2.0",
    "typer-cli",
]

[tool.hatch.build.targets.wheel]
packages = ["src/croissant_baker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Ensure `src/` layout resolves when a global PYTHONPATH shadows the editable .pth
pythonpath = ["src"]
# Suppress rdflib warning from mlcroissant (external dependency)
filterwarnings = ["ignore::DeprecationWarning:rdflib.*"]

[tool.ruff]
src = ["src"]
